--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity_">
+        <activity android:name=".WelcomeActivity_">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,8 +40,9 @@
             android:label="@string/title_activity_map">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="sematec.mehdi.mymap.LoginActivity" />
+                android:value="sematec.mehdi.mymap.WelcomeActivity" />
         </activity>
+        <activity android:name=".user.UserActivity"></activity>
     </application>
 
 </manifest>
